# pdf-to-text-qwen

./: README.md  extracted_text.md  extracted_text.txt  main.py  pyproject.toml
examples/: your_document_extracted.md
